third_party/WebKit/Source/core/layout/MultiColumnFragmentainerGroup.h
@@ -79,8 +79,21 @@ class MultiColumnFragmentainerGroup {
                                            LayoutBox::PageBoundaryRule,
                                            CoordinateSpaceConversion) const;
   LayoutUnit columnLogicalTopForOffset(LayoutUnit offsetInFlowThread) const;
+
+  // If SnapToColumnPolicy is SnapToColumn, visualPointToFlowThreadPoint() won't
+  // return points that lie outside the bounds of the columns: Before converting
+  // to a flow thread position, if the block direction coordinate is outside the
+  // column, snap to the bounds of the column, and reset the inline direction
+  // coordinate to the start position in the column. The effect of this is that
+  // if the block position is before the column rectangle, we'll get to the
+  // beginning of this column, while if the block position is after the column
+  // rectangle, we'll get to the beginning of the next column. This is behavior
+  // that positionForPoint() depends on.
+  enum SnapToColumnPolicy { DontSnapToColumn, SnapToColumn };
   LayoutPoint visualPointToFlowThreadPoint(
-      const LayoutPoint& visualPoint) const;
+      const LayoutPoint& visualPoint,
+      SnapToColumnPolicy = DontSnapToColumn) const;
+
   LayoutRect fragmentsBoundingBox(
       const LayoutRect& boundingBoxInFlowThread) const;
 
